【Add 2 entrance to grabber the lottery info】 htto://wwww.sporttery.com and http://www.500.com/ football match info

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//src/com/grabber/model/BaseModel.java=UTF-8
 encoding//src/com/grabber/util/ErrorUtil.java=UTF-8
 encoding//src/com/grabber/util/LoggerUtil.java=UTF-8
+encoding//tmp/html/NewFile.html=UTF-8
 encoding/<project>=UTF-8
 encoding/README.md=UTF-8
